Changed elections from semesterly to yearly

--- a/constitution.tex
+++ b/constitution.tex
@@ -183,7 +183,7 @@ These working groups have some key differences from non-administrative working g
 
 \subsection{Elections}\label{sec:elections}
 
-The election will be conducted by an elections committee consisting by default of the members of the Internal Interface working group, excluding any member of that working group who will be up for election. If all members of the Internal Interface working group will be going up for election, it is their responsibility to solicit a special committee from other members of the Committee to conduct the election. This election process will begin a month before the last day of class each semester, and must conclude by the last day of classes.
+The election will be conducted by an elections committee consisting by default of the members of the Internal Interface working group, excluding any member of that working group who will be up for election. If all members of the Internal Interface working group will be going up for election, it is their responsibility to solicit a special committee from other members of the Committee to conduct the election. This election process will begin a month before the last day of class of the spring semester, and must conclude by the last day of classes.
 
 All SCS PhD students who are involved with at least one working group are eligible to run for the Spokesperson for any of these three administrative working groups. To determine eligibility, the elections committee must send a request to all Working Group Spokespeople for a current list of active participants in their working group. The Spokespeople must provide this list within a week.
 
