More proposed changes to elections and clarification of edge cases

--- a/constitution.tex
+++ b/constitution.tex
@@ -183,7 +183,16 @@ These working groups have some key differences from non-administrative working g
 
 \subsection{Elections}\label{sec:elections}
 
-The election will be conducted by an elections committee consisting by default of the members of the Internal Interface working group, excluding any member of that working group who will be up for election. If all members of the Internal Interface working group will be going up for election, it is their responsibility to solicit a special committee from other members of the Committee to conduct the election. This election process will begin a month before the last day of class of the spring semester, and must conclude by the last day of classes.
+Elections for spokespeople of the administrative working groups will occur during the spring semester, with newly elected spokespeople beginning their term at latest by the start of the following fall semester.
+Terms are expected to run from fall to the following spring semester.
+Outgoing and newly elected spokespeople are encouraged to overlap during the summer to transition committee knowledge and lessons learned.
+
+At least one administrative working group spokesperson is expected to be fully engaged during the summer, but if this is not feasible (e.g., all administrative working group spokespeople are unavailable due to internships, travel, etc), all working group spokespeople available during the summer will collectively determine a suitable acting administrative spokesperson for continuing committee business during the summer term.
+The term of this active administrative spokesperson will end upon any of the elected administrative working group spokespeople returning from summer activities.
+
+The election process will begin a month before the last day of class of the spring semester, and must conclude by the last day of classes.
+The election will be conducted by an elections committee consisting by default of the members of the Internal Interface working group, excluding any member of that working group who will be up for election.
+If all members of the Internal Interface working group will be going up for election, it is their responsibility to solicit a special committee from other members of the Committee to conduct the election.
 
 All SCS PhD students who are involved with at least one working group are eligible to run for the Spokesperson for any of these three administrative working groups. To determine eligibility, the elections committee must send a request to all Working Group Spokespeople for a current list of active participants in their working group. The Spokespeople must provide this list within a week.
 
@@ -191,6 +200,8 @@ Any eligible student can nominate themselves or another eligible student for any
 
 
 At the end of the nomination period, the elections committee must create an electronic poll of all the candidates and send the poll and campaign materials to the list of eligible members.
+If an administrative working group has no candidates, the existing working group spokespeople may, on a case-by-case basis, collectively approve of non-eligible students who wish to run for these positions.
+For example, a student may have been away for the current semester and is not currently eligible, but has otherwise demonstrated capability and interest in leading the committee.
 
 In order to get elected, a candidate must be the Condorcet winner of the election. 
 
