All responsibilities should tentatively be accounted for

--- a/constitution.tex
+++ b/constitution.tex
@@ -196,11 +196,11 @@ In order to get elected, a candidate must be the Condorcet winner of the electio
 
 If, at any point, there is no Spokesperson for any administrative working group, the elections committee must hold a special election (with the same procedure as above), starting with a solicitation of active Working Group members within a week of the vacancy.
 
-\subsection{Working Group Accelerator} % Administration
+\subsection{Working Group Accelerator}
 
 The Working Group Accelerator Working Group is responsible for assisting individual working groups and coordinating between working groups.
 
-
+Members of this working group will regularly meet with or attend the meetings of the non-administrative working groups, identifying overlap in efforts between working groups and sharing knowledge. They will also help the working groups in overcome roadblocks and prepare for updates in General Body Meetings.
 
 %% Previous Dean Interface stuff
 %is responsible for communications with the Dean's office, as well as maintaining organizational memory of best practices in communicating with administration.
@@ -225,7 +225,7 @@ The Internal Interface Working Group is responsible for scheduling and running G
 
 General Body Meetings should be organized as outlined in Section \ref{sec:GBM}. This Working Group is also responsible for acting on proposed changes to the committee or feedback given.
 
-Members of the Internal Interface Working Group can mediate when Working Group conflicts arise and can be a resource for Working Group spokespeople in managing their Working Groups.
+They will also handle the scheduling and agenda setting of meetings with the Dean, as well as urgent requests from the Dean's office.
 
 % Scheduling and conducting General Body Meetings
 % Tracking attendance at General Body Meetings
