Some elaboration on wgawg, plus adding goals

--- a/constitution.tex
+++ b/constitution.tex
@@ -198,18 +198,11 @@ If, at any point, there is no Spokesperson for any administrative working group,
 
 \subsection{Working Group Accelerator}
 
-The Working Group Accelerator Working Group is responsible for assisting individual working groups and coordinating between working groups.
+The Working Group Accelerator Working Group is responsible for assisting individual working groups and coordinating between working groups. Its overall goal is to maximize the long-term impact of the working groups and act as a communication channel between them.
 
-Members of this working group will regularly meet with or attend the meetings of the non-administrative working groups, identifying overlap in efforts between working groups and sharing knowledge. They will also help the working groups in overcome roadblocks and prepare for updates in General Body Meetings.
+Members of this working group will regularly meet with or attend the meetings of the non-administrative working groups, identifying overlap in efforts between working groups and sharing knowledge. They will also help the working groups identify and implement solutions to challenges. They will also assist working groups in preparing for updates in General Body Meetings.
 
-%% Previous Dean Interface stuff
-%is responsible for communications with the Dean's office, as well as maintaining organizational memory of best practices in communicating with administration.
 
-%Members of the Dean Interface Working Group are responsible for scheduling regular meetings with the Dean, coordinating the agenda for these meetings, and disseminating information shared by the Dean (likely in conjunction with the Student Body Interface Working Group). 
-
-%The Dean Interface Working Group is also responsible for assisting Working Groups in their communication with the Dean and other members of administration. Ideally, members in this working group will have experience with communicating with the Dean, and will be able to advise Committee members on best practices and procedures.
-
-%Finally, members of the Dean Interface Working Group will handle urgent requests for input from the Dean's office, consulting the right Working Groups and people or proposing appropriate Working Groups if none exist.
 
 %%
 % Scheduling general meetings with the Dean and coordinating information shared.
@@ -221,7 +214,7 @@ Members of this working group will regularly meet with or attend the meetings of
 
 \subsection{Internal Interface} % Internal
 
-The Internal Interface Working Group is responsible for scheduling and running General Body Meetings, keeping track of Committee membership, and handling elections (as outlined in Section \ref{sec:elections}).
+The Internal Interface Working Group is responsible for scheduling and running General Body Meetings, keeping track of Committee membership, and handling elections (as outlined in Section \ref{sec:elections}). Its overall goal is to perform tasks that don't belong in any single working group, as well as facilitate communication with the Dean.
 
 General Body Meetings should be organized as outlined in Section \ref{sec:GBM}. This Working Group is also responsible for acting on proposed changes to the committee or feedback given.
 
@@ -237,7 +230,7 @@ They will also handle the scheduling and agenda setting of meetings with the Dea
 
 \subsection{External Interface} % Constituents
 
-The External Interface Working Group is responsible for maintaining communication with the rest of the SCS PhD student body. In particular, they are responsible for documentation practices, mass communication, onboarding, and processing Working Group proposals. 
+The External Interface Working Group is responsible for maintaining communication with the rest of the SCS PhD student body. In particular, they are responsible for documentation practices, mass communication, onboarding, and processing Working Group proposals. Its overall goal is recruitment, communication with the student body, and onboarding.
 
 Although all Working Groups are responsible for producing documentation, the External Interface Working Group is responsible for maintaining the central repository, sharing and maintaining best practices, and making sure that the documentation is accessible to committee members and the broader student body at all times. 
 
