--- a/constitution.tex
+++ b/constitution.tex
@@ -207,16 +207,15 @@ In order to get elected, a candidate must be the Condorcet winner of the electio
 
 If, at any point, there is no Spokesperson for any administrative working group, the elections committee must hold a special election (with the same procedure as above), starting with a solicitation of active Working Group members within a week of the vacancy.
 
-\subsection{Dean Interface} % Administration
+\subsection{Working Group Accelerator}
 
-The Dean Interface Working Group is responsible for communications with the Dean's office, as well as maintaining organizational memory of best practices in communicating with administration.
+The Working Group Accelerator Working Group is responsible for assisting individual working groups and coordinating between working groups. Its overall goal is to maximize the long-term impact of the working groups and act as a communication channel between them.
 
-Members of the Dean Interface Working Group are responsible for scheduling regular meetings with the Dean, coordinating the agenda for these meetings, and disseminating information shared by the Dean (likely in conjunction with the Student Body Interface Working Group). 
+Members of this working group will regularly meet with or attend the meetings of the non-administrative working groups, identifying overlap in efforts between working groups and sharing knowledge. They will also help the working groups identify and implement solutions to challenges. They will also assist working groups in preparing for updates in General Body Meetings.
 
-The Dean Interface Working Group is also responsible for assisting Working Groups in their communication with the Dean and other members of administration. Ideally, members in this working group will have experience with communicating with the Dean, and will be able to advise Committee members on best practices and procedures.
 
-Finally, members of the Dean Interface Working Group will handle urgent requests for input from the Dean's office, consulting the right Working Groups and people or proposing appropriate Working Groups if none exist.
 
+%%
 % Scheduling general meetings with the Dean and coordinating information shared.
 % Making sure we have something to send the Dean (agenda, progress, proposals)
 % Meeting deadlines (for meetings with the Dean)
@@ -226,11 +225,11 @@ Finally, members of the Dean Interface Working Group will handle urgent requests
 
 \subsection{Internal Interface} % Internal
 
-The Internal Interface Working Group is responsible for scheduling and running General Body Meetings, coordinating between Working Groups, keeping track of Committee membership, and handling elections (as outlined in Section \ref{sec:elections}).
+The Internal Interface Working Group is responsible for scheduling and running General Body Meetings, keeping track of Committee membership, and handling elections (as outlined in Section \ref{sec:elections}). Its overall goal is to perform tasks that don't belong in any single working group, as well as facilitate communication with the Dean.
 
 General Body Meetings should be organized as outlined in Section \ref{sec:GBM}. This Working Group is also responsible for acting on proposed changes to the committee or feedback given.
 
-Members of the Internal Interface Working Group can mediate when Working Group conflicts arise and can be a resource for Working Group spokespeople in managing their Working Groups.
+They will also handle the scheduling and agenda setting of meetings with the Dean, as well as urgent requests from the Dean's office.
 
 % Scheduling and conducting General Body Meetings
 % Tracking attendance at General Body Meetings
@@ -240,17 +239,17 @@ Members of the Internal Interface Working Group can mediate when Working Group c
 % Communicating with Working Group leaders
 % \todo{Membership management}
 
-\subsection{Student Body Interface} % Constituents
+\subsection{External Interface} % Constituents
 
-The Student Body Interface Working Group is responsible for maintaining communication with the rest of the SCS PhD student body. In particular, they are responsible for documentation practices, mass communication, onboarding, and processing Working Group proposals.
+The External Interface Working Group is responsible for maintaining communication with the rest of the SCS PhD student body. In particular, they are responsible for documentation practices, mass communication, onboarding, and processing Working Group proposals. Its overall goal is recruitment, communication with the student body, and onboarding.
 
-Although all Working Groups are responsible for producing documentation, the Student Body Interface Working Group is responsible for maintaining the central repository, sharing and maintaining best practices, and making sure that the documentation is accessible to committee members and the broader student body at all times. 
+Although all Working Groups are responsible for producing documentation, the External Interface Working Group is responsible for maintaining the central repository, sharing and maintaining best practices, and making sure that the documentation is accessible to committee members and the broader student body at all times. 
 
 They advertise the Committee's activities to the student body by way of sharing this central repository, as well as the list of active and recruiting Working Groups. In addition, if a student has a concern they would like to discuss with the committee, the Student Body Interface Working Group is their first point of contact.
 
-Members of the Student Body Interface Working Group are responsible for onboarding new members -- for example, introducing the structure of the committee, adding them to the correct Working Groups(s), and adding them to relevant accounts (i.e. Google Drive, Slack, Github etc).
+Members of the External Interface Working Group are responsible for onboarding new members -- for example, introducing the structure of the committee, adding them to the correct Working Groups(s), and adding them to relevant accounts (i.e. Google Drive, Slack, Github etc).
 
-Finally, proposals for new Working Groups are submitted to this working group, as described in Section \ref{sec:creation}. Members of the Student Body Interface Working Group should assist the proposers in making sure that their proposal is aligned with the Committee's Mission Statement .
+Finally, proposals for new Working Groups are submitted to this working group, as described in Section \ref{sec:creation}. Members of the External Interface Working Group should assist the proposers in making sure that their proposal is aligned with the Committee's Mission Statement .
 
 % Documentation (website, google drive) - keeping history
 % Emailing student body
